# cellular_automaton

./: CMakeLists.txt  experiment1  experiment1stat.csv  experiment2  experiment2stat.csv  experiment3  gnuplot.gnuplot  run_script.sh
include/: CellularAutomaton.hpp  Coordinates.hpp  Grid.hpp  Polluter.hpp  Polluters.hpp  Statistics.hpp  WindField.hpp  render.hpp
src/: CellularAutomaton.cpp  Coordinates.cpp  Grid.cpp  Polluter.cpp  Polluters.cpp  Statistics.cpp  WindField.cpp  main.cpp  render.cpp
